--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
                 <configuration>
                     <jdkVersion>1.8</jdkVersion>
                     <!-- Change this to YOUR application name! -->
-                    <appName>hero-app</appName>
+                    <appName>kinyua</appName>
                     <processTypes>
                         <web>java -jar target/hero-app-1.0-jar-with-dependencies.jar</web>
                     </processTypes>
